# simplemath

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  matherr.rs  quaternion.rs  tests.rs
src/filters/: mod.rs  ukf.rs
src/matrix/: matrixbase.rs  matrixops.rs  matrixutils.rs  mod.rs
src/ode/: mod.rs  odestate_matrix.rs  rk4.rs  rk_adaptive.rs  rk_adaptive_settings.rs  rk_explicit.rs  rkts54.rs  rkv65.rs  rkv87.rs  rkv98.rs  rkv98_nointerp.rs  types.rs
