[package]
name = "simple-math"
version = "0.1.0"
readme = "README.md"
description = "Basic math and linear algebra library, with minimal dependencies"
edition = "2021"
license-file = "LICENSE"
keywords = ["math", "algebra", "matrix", "embedded", "ode"]
categories = ["aerospace", "algorithms", "mathematics", "science"]

[lib]
name = "embmath"

[dependencies]
itertools = "0.13.0"
thiserror = "2.0.7"

[dev-dependencies]
rand = "0.8.4"       # used for testing
rand_distr = "0.4.2" # used for testing
chrono = "0.4.39"    # used for testing
approx = "0.5.0"     # used for testing

[features]


# repository = "https://github.com/ssmichael1/ctrl"
[profile.test]
opt-level = 3
